--- a/FSW-110/week1/selecting_elements/index.html
+++ b/FSW-110/week1/selecting_elements/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>Selecting Elements</title>
 </head>
 <body>
-    
+    <h1 id="h1id"> header </h1>
 </body>
+
+<script src="index.js"></script>
 </html>
