--- a/FSW-110/week3/changing_styles_wJS/index.html
+++ b/FSW-110/week3/changing_styles_wJS/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>changing styles wJS</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <script src="index.js"></script>
 </body>
 </html>
