responsive design error

--- a/FSW-100/week6/website/index.html
+++ b/FSW-100/week6/website/index.html
@@ -25,7 +25,7 @@
             <nav class="navbar">
                 <a href="#">Home</a>
                 <a href="#">Drinks</a>
-                <a href="#">Sandwhichs</a>
+                <a href="#">Sandwiches</a>
                 <a href="#">Desserts</a>
                 <a href="#">Contact</a>
             </nav>
@@ -42,11 +42,13 @@
         <div class="content">
             <span>Fresh & Organic</span>
             <h3>Your daily coffee fix</h3>
-            <a href="#" class="btn">Start Order</a>
+         <!--  <a href="#" class="btn">Start Order</a>  --> 
         </div>
     </section>
     <!--intro content end-->
 
+
+    <!--banner section start-->
     <section class="banner-container">
 
         <div class="banner">
@@ -54,7 +56,7 @@
             <div class="content">
                 <h3>Special Offer</h3>
                 <p>2-for-1 shots of espresso </p>
-                <a href="#" class="btn">Order</a>
+            <!--   <a href="#" class="btn">Order</a> --> 
             </div>
         </div>
 
@@ -63,12 +65,148 @@
             <div class="content">
                 <h3>Limited Offer</h3>
                 <p>Free pie with large latte </p>
-                <a href="#" class="btn">Order</a>
+              <!--  <a href="#" class="btn">Order</a> -->
             </div>
         </div>
     </section>
 
+    <!--banner section end-->
 
+    <!--category section start-->
+    <section class="category" id="category">
+
+        <h1 class="heading"> shop by <span>category</span></h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <h3>Hot Drinks</h3>
+                <p>Customize your favorite drinks</p>
+                <img src="imgs/size cups.jpg" alt="">
+              <!--  <a href="#" class="btn">Customize now</a> -->
+            </div>
+            <div class="box">
+                <h3>Baked goodies</h3>
+                <p>Mix & Match Munchies</p>
+                <img src="imgs/baked.jpg" alt="">
+              <!--  <a href="#" class="btn">lets get fat</a> -->
+            </div>
+            <div class="box">
+                <h3>Sandwiches</h3>
+                <p>Community favorite Sandwhichs</p>
+                <img src="imgs/cold cut.jpg" alt="">
+ <!--               <a href="#" class="btn">Order now</a>   -->
+            </div>
+
+        </div>
+    </section>
+
+    <!--category section end-->
+
+    <!--product section start-->
+    <section class="product" id="product">
+
+        <h1 class="heading">Fresh Favorites</h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <div class="icons">
+                    <a href="#" class="fa fa-heart"></a>
+                    <a href="#" class="fa fa-share"></a>
+                    <a href="#" class="fa fa-eye"></a>
+                </div>
+
+                <img src="imgs/latte2.jpg" alt="">
+                <h3>Latte</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-full"></i>
+                </div>
+                <div id= "latte-price" class="price"> $2.79</div>
+                <div class="quantity">
+                    <span>Quantity : </span>
+                    <input id="latte-qty" type="number" min="1" max="10" value="1">
+                </div>
+                <button id="latte" class="btn">Place to order</button>
+
+            </div>
+            <div class="box">
+                <div class="icons">
+                    <a href="#" class="fa fa-heart"></a>
+                    <a href="#" class="fa fa-share"></a>
+                    <a href="#" class="fa fa-eye"></a>
+                </div>
+
+                <img src="imgs/bubble3.webp" alt="">
+                <h3>Bubble Tea</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-full"></i>
+                </div>
+                <div id="tea-price" class="price"> $2.99</div>
+                <div class="quantity">
+                    <span>Quantity : </span>
+                    <input id="tea-qty"  type="number" min="1" max="10" value="1">
+                </div>
+                <button id="tea" class="btn">Place to order</button>
+
+            </div>
+
+            <div class="box">
+                <div class="icons">
+                    <a href="#" class="fa fa-heart"></a>
+                    <a href="#" class="fa fa-share"></a>
+                    <a href="#" class="fa fa-eye"></a>
+                </div>
+
+                <img src="imgs/bfast.jpg" alt="">
+                <h3>Breakfast Sandwich</h3>
+                <div class="stars">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-full"></i>
+                </div>
+                <div id="sandwich-price" class="price"> $1.99</div>
+                <div class="quantity">
+                    <span>Quantity : </span>
+                    <input id="sandwich-qty"  type="number" min="1" max="10" value="1">
+                </div>
+                <button id="sandwich" class="btn">Place to order</button>
+
+            </div>
+
+            <section class="total" id="total">
+                <div class="box-container">latte
+                    <div class="box">
+                        <input id="latte-total" type="text">
+                    </div>
+                </div>
+                <div class="box-container">
+                    <div class="box">
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="box-container">
+                    <div class="box">
+                        <input type="text">
+                    </div>
+                </div>
+
+            </section>
+
+        </div>
+    </section>
+
+    <!--product section end-->
 
 
 
