--- a/FSW-113/week2/assignments/calendar/calendar.html
+++ b/FSW-113/week2/assignments/calendar/calendar.html
@@ -2,20 +2,21 @@
 
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>Javascript Calendar</title>
-    <link rel='stylesheet' href='calendar.css'>
-</head>
-
-<body>
-    <div class='calendarWrapper'>
-        <div class='calendarTitle'></div>
-        <div class='selectMonth' id='selectMonth'></div>
-        <div class='calendar' id='calendarDays'></div>
-
-    </div>
-</body>
-<script src='./calendar.js'></script>
-
+    <head>
+        <title>Javascript Calendar</title>
+        <link rel='stylesheet' href='calendar.css'>
+    </head>
+    <body>
+        <div class='calendarWrapper'>
+            <div class='calendarTitle'></div>
+            <div class='select' id='select'> 
+                <select name="monthSelect" id="monthSelect"></select>
+                <input class= 'input' type="text" id="year">
+                <button class="button" id="button">go</button>
+            </div>
+                
+            <div class='calendar' id='calendarDays'></div>
+        </div>
+    </body>
+    <script src='./calendar.js'></script>
 </html>
