--- a/FSW-113/week6/assignment/weather.html
+++ b/FSW-113/week6/assignment/weather.html
@@ -29,6 +29,6 @@
         </div>
 
     </body>
-
+<script src="scripts/weather.js" type="module"></script>
     <!-- This app should use modularized scripts. Use the proper syntax to include whatever script(s) are necessary -->
 </html>
