--- a/FSW-115/week6/index.html
+++ b/FSW-115/week6/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>promise chaining</title>
 </head>
+
 <body>
+
+    <div class="wrapper">
+        <div class="lukeContainer"></div>
+        <div id="header"></div>
+        <div class="planetContainer"></div>
+
+
+        <ol id="movielist">
+
+        </ol>
+    </div>
+
+
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.js"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
