--- a/FSW-113/capstone/index.html
+++ b/FSW-113/capstone/index.html
@@ -7,6 +7,7 @@
 <html>
     <head>
         <title>My Own Bug Tracker</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id='reportWrapper' class='reportWrapper'>
@@ -31,7 +32,7 @@
                 </form>
             </div>
             <br />
-            <div id='listWrapper' class='listWrapper'></div>
+            <div id='listWrapper' class='listWrapper'></div> heyh4eed5
         </div>
     </body>
 
