--- a/FSW-113/capstone/index.html
+++ b/FSW-113/capstone/index.html
@@ -8,6 +8,7 @@
     <head>
         <title>My Own Bug Tracker</title>
         <link rel="stylesheet" href="style.css">
+       
     </head>
     <body>
         <div id='reportWrapper' class='reportWrapper'>
@@ -32,8 +33,10 @@
                 </form>
             </div>
             <br />
-            <div id='listWrapper' class='listWrapper'></div> heyh4eed5
+            <div id='listWrapper' class='listWrapper'></div>
         </div>
+        <script src="scripts/data.js"></script>
+        <script src="scripts/bug.js"></script>
     </body>
 
 </html>
